--- a/index.html
+++ b/index.html
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start</title>
+    <title>Ndricim Pllana Photography</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1><a href="about.html" target="_blank">Ndricim Pllana Photography</a></h1>
+    </header>
+
+    <main>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/007bff/ffffff?text=Photo+1" alt="Photo 1">
+            <div class="overlay">
+                <h2>Photo 1</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/f08080/ffffff?text=Photo+2" alt="Photo 2">
+            <div class="overlay">
+                <h2>Photo 2</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/800080/ffffff?text=Photo+3" alt="Photo 3">
+            <div class="overlay">
+                <h2>Photo 3</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/ffff00/000000?text=Photo+4" alt="Photo 4">
+            <div class="overlay">
+                <h2>Photo 4</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/00ff00/000000?text=Photo+5" alt="Photo 5">
+            <div class="overlay">
+                <h2>Photo 5</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/0000ff/ffffff?text=Photo+6" alt="Photo 6">
+            <div class="overlay">
+                <h2>Photo 6</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/ff0000/ffffff?text=Photo+7" alt="Photo 7">
+            <div class="overlay">
+                <h2>Photo 7</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/00ffff/000000?text=Photo+8" alt="Photo 8">
+            <div class="overlay">
+                <h2>Photo 8</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/808080/ffffff?text=Photo+9" alt="Photo 9">
+            <div class="overlay">
+                <h2>Photo 9</h2>
+            </div>
+        </div>
+        <div class="photo-item">
+            <img src="https://placehold.co/600x400/a0522d/ffffff?text=Photo+10" alt="Photo 10">
+            <div class="overlay">
+                <h2>Photo 10</h2>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2024 Ndricim Pllana</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
