--- a/Practices/Start/index.html
+++ b/Practices/Start/index.html
@@ -12,4 +12,6 @@
         <p>My Second <strong>Paragraph</strong> </p> <!-- strong tag makes the text bold--> 
         <p>My Third <em>Paragraph</em> </p> <!-- em tag makes the text italic-->
     </body>
+    <a href="linksimages.html" target="_self">Links And Images</a> <br><br>
+    <a href="lists.html" target="_self">Lists</a>
 </html>
