--- a/Practices/Start/linksimages.html
+++ b/Practices/Start/linksimages.html
@@ -9,12 +9,15 @@
 
 <body>
 
-    <h1>Homepage</h1>
-    <a href="https://google.com" target="_blank" rel="noopener noreferrer">Search for more!</a>
+    <h1>Links And Images</h1>
+    <a href="https://google.com" target="_blank" rel="noopener noreferrer">Search for more!</a> <br><br>
     <!--target="_blank" opens the link in a new tab-->
     <!-- rel="noopener noreferrer" opens the link in a new tab without any security issues-->
     <!-- we use noopener and noreferrer to avoid security issues or tabnabbing-->
-     <a href="index.html" target="_self" rel="noopener noreferrer">Main Page.</a>
+     <a href="index.html" target="_self" rel="noopener noreferrer">Main Page.</a> <br><br>
+     <!-- href="index.html" is the link to the index.html which is an absolute link-->
+    <a href="lists.html" target="_self" rel="noopener noreferrer">List Page.</a> <br><br>
+
      
 </body>
 
