--- a/Practices/Start/lists.html
+++ b/Practices/Start/lists.html
@@ -6,6 +6,7 @@
     <title>Lists </title>
 </head>
 <body>
+    <h1>This is a Random List</h1>
     <ul>
         
         <li>Frame 1</li>
@@ -18,5 +19,7 @@
         <li>Frame 3</li>
         <li>Frame 4</li>
     </ol>
+    <a href="index.html" target="_self" style="border: 5px solid black; border-radius: 50px;">Main Page.</a> <br><br>
+    <a href="linksimages.html" target="_self" style="border: 5px solid black; border-radius: 50px;">Links and Images</a>
 </body>
 </html>
