--- a/Practices/Start/linksimages.html
+++ b/Practices/Start/linksimages.html
@@ -8,17 +8,32 @@
 </head>
 
 <body>
+    <header>
 
-    <h1>Links And Images</h1>
-    <a href="https://google.com" target="_blank" rel="noopener noreferrer">Search for more!</a> <br><br>
-    <!--target="_blank" opens the link in a new tab-->
-    <!-- rel="noopener noreferrer" opens the link in a new tab without any security issues-->
-    <!-- we use noopener and noreferrer to avoid security issues or tabnabbing-->
-     <a href="index.html" target="_self" rel="noopener noreferrer">Main Page.</a> <br><br>
-     <!-- href="index.html" is the link to the index.html which is an absolute link-->
-    <a href="lists.html" target="_self" rel="noopener noreferrer">List Page.</a> <br><br>
+    </header>
+    <main>
+        <h1>Links And Images</h1>
+        <a href="https://google.com" target="_blank" rel="noopener noreferrer">Search for more!</a> <br><br>
+        <!--target="_blank" opens the link in a new tab-->
+        <!-- rel="noopener noreferrer" opens the link in a new tab without any security issues-->
+        <!-- we use noopener and noreferrer to avoid security issues or tabnabbing-->
+        <a href="index.html" target="_self" rel="noopener noreferrer">Main Page.</a> <br><br>
+        <!-- href="index.html" is the link to the index.html which is an absolute link-->
+        <a href="lists.html" target="_self" rel="noopener noreferrer">List Page.</a> <br><br>
 
-     
+        <section>
+            <article>
+                
+            </article>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+    <aside>
+        <img src="https://www.theodinproject.com/mstile-310x310.png"" alt=" odin logo" width="500" height="500">
+        <!-- alt="odin logo" is the alternative text for the image-->
+    </aside>
 </body>
 
 </html>
