added css styling to all the elements with id and class selectors

--- a/Practices/Recipies/pancakes.html
+++ b/Practices/Recipies/pancakes.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pancakes Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <p>Pancakes are made with whole grain flour and milk and are very healthy</p>
+
 </body>
 <a href="index.html" target="_self">Go Back</a>
 </html>
