--- a/Practices/Recipies/burrito.html
+++ b/Practices/Recipies/burrito.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <p>Burrito is made of rice, beans, cheese, and toppings</p>
     
 </body>
 <a href="index.html" target="_self">Go Back</a>
