--- a/Practices/Recipies/risotto.html
+++ b/Practices/Recipies/risotto.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rissotto Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <p>Risotto is made of arborio rice, butter, and cheese</p>
     
 </body>
 <a href="index.html" target="_self">Go Back</a>
